Updates to view/template commit

--- a/SimpleBlog/Views/Posts/Index.cshtml
+++ b/SimpleBlog/Views/Posts/Index.cshtml
@@ -14,3 +14,9 @@
     @Html.RouteLink("Click here", "login") to login
 </p>
     
+@section Scripts 
+{
+    <script>
+        alert("hi");
+    </script>
+}
