Added basic login form

--- a/SimpleBlog/Views/Auth/Login.cshtml
+++ b/SimpleBlog/Views/Auth/Login.cshtml
@@ -1,5 +1,25 @@
-﻿@{ 
+﻿@model SimpleBlog.ViewModels.AuthLogin
+
+@{ 
   ViewBag.title = "Login";
 }
 
-<p> this is the login view</p>
+@using (Html.BeginForm())
+{
+
+    @Html.ValidationSummary()
+
+    <div>
+        @Html.LabelFor(x => x.Username)
+        @Html.EditorFor(x => x.Username)
+    </div>
+    
+    <div>
+        @Html.LabelFor(x => x.Password)
+        @Html.EditorFor(x => x.Password)
+    </div>
+
+    <div>
+        <input type="submit" value="Login" />
+    </div>
+}
